# tld-cli

./: .gitignore  .golangci.yml  .goreleaser.yml  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  analyze_folders.py  analyze_stats.py  build.rs  cliff.toml  clippy.toml  examples.md  gemini-extension.json  go.mod  go.sum  main.go  repos.txt  rust-toolchain.toml  skills-lock.json  tld-docs.md  vision.md
.claude-plugin/: marketplace.json  plugin.json
client/: client.go  client_test.go
cmd/: add_link.go  add_link_test.go  analyze.go  analyze_connectors.go  analyze_internal_test.go  analyze_repo_scope_test.go  analyze_resolution.go  analyze_test.go  apply.go  apply_test.go  check.go  check_repo_scope_test.go  check_test.go  conflict_detection_test.go  connect_elements.go  connect_objects.go  connect_objects_test.go  connect_test.go  convert.go  create_diagram.go  create_diagram_test.go  create_element.go  create_link.go  create_link_test.go  create_object.go  create_object_test.go  diff.go  diff_test.go  export.go  export_test.go  groups.go  hints.go  init.go  init_new_test.go  init_test.go  json_output.go  legacy_surface_removed_test.go  login.go  plan.go  plan_test.go  (+23 more)
docs/: CLI_GUIDE.md  adding-new-languages.md
gemini-plugin/: GEMINI.md
planner/: json_output.go  plan.go  plan_test.go  proto_mapping_test.go  report.go  report_test.go  warnings.go  warnings_test.go
reporter/: reporter.go  reporter_test.go
scripts/: install.sh  pre-commit.sh  set-version.sh  setup-hooks.sh  (+1 more)
(+182 files in other folders)
